# hs-toxcore

./: .cirrus.yml  .clang-format  .gitignore  .gitmodules  .haskell-travis.yml  .leaf.yml  .md-style.rb  .travis.yml  BUILD.bazel  LICENSE.md  Makefile  README.md  appveyor.yml  circle.yml  codecov.yml  configure.mk  heroku.yml  hstox.cabal  netlify.toml  stack.yaml  toxcore.cabal
.circleci/: config.yml  launch-job
.github/: settings.yml
.github/docker/: Dockerfile  Dockerfile.heroku
.github/workflows/: checks.yml  ci.yml  publish.yml
.travis/: android-after_success  android-install  android-script  env-android.sh  env-linux.sh  env-osx.sh  env.sh  install  linux-after_script  linux-install  linux-script  osx-install  phase
android/: build.sh
android/patches/: hs-clock-ffi.patch  hs-network-ffi.patch  hs-zlib-ffi.patch
android/user-scripts/: cabal-install-clock.sh  cabal-install-network.sh  cabal-install-setup.sh  cabal-install-zlib.sh  cabal-prepare.sh  install-happy.sh  install-hspec.sh  install-libsodium.sh
licenses/: mit.md
msgpack/Data/: MessagePack.hs
msgpack/Data/MessagePack/: Aeson.hs  Assoc.hs  Class.hs  Get.hs  Object.hs  Put.hs
msgpack/Network/MessagePack/: Client.hs  Server.hs
src/: TestClient.hs  tox-refsut.hs  tox-spectest.hs
src/Data/Binary/: Bits.hs
src/Data/Binary/Bits/: Get.hs  Put.hs
src/Network/: NetworkSpec.hs  Tox.lhs
src/Network/Tox/: Binary.hs  Crypto.lhs  DHT.lhs  DHTSpec.hs  Encoding.hs  ExternalTest.hs  ExternalTestSpec.hs  NodeInfo.lhs  NodeInfoSpec.hs  Protocol.lhs  RPC.lhs  SaveData.lhs  Testing.lhs  Time.hs  Timed.hs  TimedT.hs  TypeName.hs
src/Network/Tox/Application/: GroupChats.lhs  GroupChatsPackets.lhs
src/Network/Tox/Crypto/: Box.lhs  BoxSpec.hs  CombinedKey.lhs  CombinedKeySpec.hs  Key.lhs  KeyPair.lhs  KeyPairSpec.hs  Keyed.hs  KeyedT.hs  Nonce.lhs  NonceExtSpec.hs  NonceSpec.hs  Text.lhs  TextSpec.hs
src/Network/Tox/DHT/: ClientList.lhs  ClientNode.lhs  DhtPacket.lhs  DhtPacketSpec.hs  DhtRequestPacket.lhs  DhtState.lhs  DhtStateSpec.hs  Distance.lhs  DistanceExtSpec.hs  KBuckets.lhs  KBucketsExtSpec.hs  KBucketsSpec.hs  NodeList.lhs  NodesRequest.lhs  NodesResponse.lhs  Operation.lhs  PendingReplies.lhs  PingPacket.lhs  RpcPacket.lhs  RpcPacketSpec.hs  Stamped.hs
src/Network/Tox/ExternalTest/: ExternalEncodingSpec.hs  Test.hs  Test.lhs  TestSpec.hs
src/Network/Tox/Network/: MonadRandomBytes.hs  Networked.hs
src/Network/Tox/NodeInfo/: HostAddress.lhs  NodeInfo.lhs  NodeInfoExtSpec.hs  PortNumber.lhs  SocketAddress.lhs  TransportProtocol.lhs  TransportProtocolSpec.hs
src/Network/Tox/Protocol/: Packet.lhs  PacketKind.lhs  PacketSpec.hs
src/Network/Tox/SaveData/: Bytes.lhs  Conferences.lhs  DHT.lhs  Friend.lhs  Groups.lhs  Nodes.hs  Util.hs
src/msgpack/Data/: MessagePack.hs  Result.hs
src/msgpack/Data/MessagePack/: Assoc.hs  Class.hs  Generic.hs  Get.hs  Object.hs
src/msgpack/Network/MessagePack/: Client.hs  Server.hs
src/testsuite/: TestSuite.hs  ToxTestSuite.hs
src/testsuite/Data/: MessagePackSpec.hs  ResultSpec.hs
src/testsuite/Data/MessagePack/: AssocSpec.hs
src/testsuite/Network/: ToxSpec.hs
src/testsuite/Network/Tox/: BinarySpec.hs  CryptoSpec.hs  DHTSpec.hs  EncodingSpec.hs  RPCTest.hs  SaveDataSpec.hs
src/testsuite/Network/Tox/C/: ToxSpec.hs
src/testsuite/Test/: Result.hs
src/tox/Network/: Tox.lhs
src/tox/Network/Tox/: Binary.hs  C.hs  Crypto.lhs  DHT.lhs  Encoding.hs  ExternalTest.hs  Protocol.lhs  RPC.lhs  Testing.lhs  Time.hs  Time.lhs  Timed.hs  TimedT.hs
test/: .gitignore  README.md  test-hstox.hs  test-toxcore.hs  testsuite.hs
test-server/: TestServer.hs  TestServer.lhs
test-tox/Data/: MessagePackSpec.hs
test-tox/Network/Tox/: BinarySpec.hs  CryptoSpec.hs  Encoding.hs  EncodingSpec.hs  ProtocolSpec.hs
test-tox/Network/Tox/Crypto/: BoxSpec.hs  CombinedKeySpec.hs  KeyPairSpec.hs  KeySpec.hs  NonceSpec.hs  TextSpec.hs
test-tox/Network/Tox/DHT/: DhtPacketSpec.hs  DhtStateSpec.hs  NodesRequestSpec.hs  NodesResponseSpec.hs  PingPacketSpec.hs
test-tox/Network/Tox/NodeInfo/: HostAddressSpec.hs  NodeInfoSpec.hs  PortNumberSpec.hs  SocketAddressSpec.hs  TransportProtocolSpec.hs
test-tox/Network/Tox/Protocol/: PacketKindSpec.hs
test-toxcore/: .gitignore  Makefile  TestToxcore.hs  binary_encode.c  driver.c  errors.h  methods.c  methods.h  util.c  util.h
test-toxcore/test-inputs/: Nonce.increment  Nonce.newNonce
test/Data/: Result.hs
test/Network/Tox/: CryptoSpec.hs  DHTSpec.hs  EncodingSpec.hs  NodeInfoSpec.hs  ProtocolSpec.hs  SaveDataSpec.hs
test/Network/Tox/Crypto/: BoxSpec.hs  CombinedKeySpec.hs  KeyPairSpec.hs  KeySpec.hs  NonceSpec.hs
test/Network/Tox/DHT/: ClientListSpec.hs  DhtPacketSpec.hs  DhtRequestPacketSpec.hs  DhtStateSpec.hs  DistanceSpec.lhs  KBucketsSpec.hs  NodesRequestSpec.hs  NodesResponseSpec.hs  OperationSpec.hs  PendingRepliesSpec.hs  PingPacketSpec.hs  RpcPacketSpec.hs
test/Network/Tox/NodeInfo/: HostAddressSpec.hs  NodeInfoSpec.hs  PortNumberSpec.hs  SocketAddressSpec.hs  TransportProtocolSpec.hs
test/Network/Tox/Protocol/: PacketKindSpec.hs  PacketSpec.hs
test/autotest/Network/Tox/: CSpec.hs
test/hstox/: TestServer.lhs  testsuite.mpi
test/toxcore/: .gitignore  0001-Added-skel-fxn-to-create-DHT-packets-in-alignment-wi.patch  Makefile  TestToxcore.hs  binary_decode.c  binary_encode.c  driver.c  driver.h  errors.h  fuzz_main.c  methods.c  methods.h  packet_kinds.c  packet_kinds.h  sut-toxcore.hs  test_main.c  util.c  util.h
tools/: BUILD.bazel  build-docs  deploy.sh  format-haskell  hstox-remotes  install-deplibs  install-libsodium  mpi2c  prepare_third_party.sh  run-tests  setup-heroku  toxsave-convert.hs  toxsave-test.hs
tools/MessagePackParser/: MessagePackParser.hs
tools/docker/: Dockerfile  Dockerfile.in  Makefile  build-libsodium.sh  cabal-install-setup.sh  cabal-install-zlib.sh  dockrun  entrypoint.sh
tools/docker/user-scripts/: .gitignore  cabal-install-setup.sh  cabal-install-zlib.sh  entrypoint.sh  install-deps.sh.in  target-cabal
web/: BUILD.bazel  webservice.hs
web/Network/Tox/: App.hs
(+67 files in other folders)
