load("@ai_formation_hazel//tools:mangling.bzl", "hazel_library")
load("@rules_haskell//haskell:defs.bzl", "haskell_library", "haskell_test")
load("//third_party/haskell/hspec-discover:build_defs.bzl", "hspec_library")
load("//tools/project:build_defs.bzl", "project")

project()

haskell_library(
    name = "hs-toxcore",
    srcs = glob(["src/tox/**/*.*hs"]),
    compiler_flags = [
        "-j4",
        "-Wno-unused-imports",
    ],
    src_strip_prefix = "src/tox",
    version = "0.0.2",
    visibility = ["//visibility:public"],
    deps = [
        "//hs-msgpack",
        "//hs-msgpack-rpc",
        hazel_library("MonadRandom"),
        hazel_library("QuickCheck"),
        hazel_library("base"),
        hazel_library("base16-bytestring"),
        hazel_library("binary"),
        hazel_library("binary-bits"),
        hazel_library("bytestring"),
        hazel_library("clock"),
        hazel_library("containers"),
        hazel_library("entropy"),
        hazel_library("integer-gmp"),
        hazel_library("iproute"),
        hazel_library("lens-family"),
        hazel_library("mtl"),
        hazel_library("network"),
        hazel_library("random"),
        hazel_library("saltine"),
        hazel_library("transformers"),
    ],
)

hspec_library(
    name = "testsuite",
    compiler_flags = [
        "-j4",
        "-Wno-unused-imports",
    ],
    src_strip_prefix = "src/testsuite",
    version = "0.0.2",
    deps = [
        ":hs-toxcore",
        "//hs-msgpack",
        "//hs-msgpack-rpc",
        "//hs-msgpack-types",
        hazel_library("QuickCheck"),
        hazel_library("base"),
        hazel_library("binary"),
        hazel_library("binary-bits"),
        hazel_library("bytestring"),
        hazel_library("containers"),
        hazel_library("hspec"),
        hazel_library("mtl"),
        hazel_library("saltine"),
        hazel_library("text"),
    ],
)

haskell_test(
    name = "test",
    srcs = glob(["test/**/*.*hs"]),
    compiler_flags = ["-Wno-unused-imports"],
    src_strip_prefix = "test",
    deps = [
        ":hs-toxcore",
        ":testsuite",
        hazel_library("async"),
        hazel_library("base"),
    ],
)
