load("@rules_haskell//haskell:defs.bzl", "haskell_library")
load("//third_party/haskell/hspec-discover:build_defs.bzl", "hspec_test")
load("//tools/project:build_defs.bzl", "project")

project(
    custom_cirrus = True,
    license = "gpl3-https",
)

haskell_library(
    name = "hs-toxcore",
    srcs = glob(["src/**/*.*hs"]),
    ghcopts = ["-j4"],
    src_strip_prefix = "src",
    tags = ["no-cross"],
    version = "0.2.12",
    visibility = ["//visibility:public"],
    deps = [
        "//hs-msgpack-arbitrary",
        "//hs-msgpack-binary",
        "//hs-msgpack-types",
        "//third_party/haskell:MonadRandom",
        "//third_party/haskell:QuickCheck",
        "//third_party/haskell:base",
        "//third_party/haskell:base16-bytestring",
        "//third_party/haskell:binary",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:clock",
        "//third_party/haskell:containers",
        "//third_party/haskell:entropy",
        "//third_party/haskell:integer-gmp",
        "//third_party/haskell:iproute",
        "//third_party/haskell:lens-family",
        "//third_party/haskell:monad-validate",
        "//third_party/haskell:mtl",
        "//third_party/haskell:network",
        "//third_party/haskell:random",
        "//third_party/haskell:saltine",
        "//third_party/haskell:transformers",
    ],
)

hspec_test(
    name = "testsuite",
    size = "small",
    ghcopts = ["-j4"],
    deps = [
        ":hs-toxcore",
        "//hs-msgpack-binary",
        "//hs-msgpack-types",
        "//third_party/haskell:QuickCheck",
        "//third_party/haskell:async",
        "//third_party/haskell:base",
        "//third_party/haskell:binary",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:containers",
        "//third_party/haskell:hspec",
        "//third_party/haskell:monad-validate",
        "//third_party/haskell:mtl",
        "//third_party/haskell:saltine",
        "//third_party/haskell:text",
    ],
)
