name:                 hstox
synopsis:             A Tox protocol implementation in Haskell
version:              0.0.1
cabal-version:        >= 1.10
license:              AGPL-3
license-file:         LICENSE.md
build-type:           Simple
author:               iphy
maintainer:           iphy
copyright:            © 2016 iphy
homepage:             http://hstox.github.io
category:             Network
description:          A Tox protocol implementation in Haskell

source-repository head
  type: git
  location: https://github.com/iphydf/hstox

flag library-only
  description: Build only library, no executables or tests.
  default: False

library
  default-language: Haskell2010
  hs-source-dirs:
      src/tox
  ghc-options:
      -Wall
      -fno-warn-unused-imports
  build-depends:
      base < 5
    , QuickCheck >= 2.9.1
    , async
    , base16-bytestring
    , binary
    , binary-bits
    , binary-conduit
    , bytestring
    , conduit
    , conduit-extra
    , containers
    , data-binary-ieee754
    , data-msgpack
    , deepseq
    , exceptions
    , hashable
    , integer-gmp
    , iproute
    , monad-control
    , mtl
    -- network-2.6.2.1 is the last version that can be cross-compiled, so we install
    -- it explicitly here.
    , network <= 2.6.2.1
    , network-msgpack-rpc
    , saltine
    , scientific
    , split
    , tagged
    , text
    , transformers
    , unordered-containers
  exposed-modules:
      Network.Tox
      Network.Tox.Binary
      Network.Tox.Crypto
      Network.Tox.Crypto.Box
      Network.Tox.Crypto.CombinedKey
      Network.Tox.Crypto.Key
      Network.Tox.Crypto.KeyPair
      Network.Tox.Crypto.Nonce
      Network.Tox.DHT
      Network.Tox.DHT.DhtPacket
      Network.Tox.DHT.DhtState
      Network.Tox.DHT.Distance
      Network.Tox.DHT.KBuckets
      Network.Tox.DHT.NodesRequest
      Network.Tox.DHT.NodesResponse
      Network.Tox.DHT.PingPacket
      Network.Tox.DHT.RpcPacket
      Network.Tox.Encoding
      Network.Tox.NodeInfo
      Network.Tox.NodeInfo.HostAddress
      Network.Tox.NodeInfo.NodeInfo
      Network.Tox.NodeInfo.PortNumber
      Network.Tox.NodeInfo.SocketAddress
      Network.Tox.NodeInfo.TransportProtocol
      Network.Tox.Protocol
      Network.Tox.Protocol.Packet
      Network.Tox.Protocol.PacketKind
      Network.Tox.RPC
      Network.Tox.Testing
  if !flag(library-only)
    hs-source-dirs:
        src/testsuite
    build-depends:
        hspec
    other-modules:
        Network.Tox.BinarySpec
        Network.Tox.Crypto.BoxSpec
        Network.Tox.Crypto.CombinedKeySpec
        Network.Tox.Crypto.KeyPairSpec
        Network.Tox.Crypto.KeySpec
        Network.Tox.Crypto.NonceSpec
        Network.Tox.CryptoSpec
        Network.Tox.DHT.DhtPacketSpec
        Network.Tox.DHT.DhtStateSpec
        Network.Tox.DHT.DistanceSpec
        Network.Tox.DHT.KBucketsSpec
        Network.Tox.DHT.NodesRequestSpec
        Network.Tox.DHT.NodesResponseSpec
        Network.Tox.DHT.PingPacketSpec
        Network.Tox.DHT.RpcPacketSpec
        Network.Tox.DHTSpec
        Network.Tox.EncodingSpec
        Network.Tox.NodeInfo.HostAddressSpec
        Network.Tox.NodeInfo.NodeInfoSpec
        Network.Tox.NodeInfo.PortNumberSpec
        Network.Tox.NodeInfo.SocketAddressSpec
        Network.Tox.NodeInfoSpec
        Network.Tox.NodeInfo.TransportProtocolSpec
        Network.Tox.Protocol.PacketKindSpec
        Network.Tox.Protocol.PacketSpec
        Network.Tox.ProtocolSpec
        Network.Tox.RPCTest
        Network.ToxSpec
    exposed-modules:
        TestSuite

executable msgpack-parser
  default-language: Haskell2010
  hs-source-dirs:
      tools
  ghc-options:
      -Wall
      -fno-warn-unused-imports
  build-depends:
      base < 5
    , bytestring
    , groom
    , data-msgpack
  main-is: msgpack-parser.hs
  if flag(library-only)
    buildable: False

executable sut-toxcore
  default-language: Haskell2010
  hs-source-dirs: test/toxcore
  ghc-options: -Wall
  build-depends: base < 5
  main-is: sut-toxcore.hs
  extra-libraries: pthread sodium
  include-dirs:
      test/toxcore/msgpack-c/include
      test/toxcore/toxcore/toxcore
  c-sources:
      test/toxcore/binary_decode.c
      test/toxcore/binary_encode.c
      test/toxcore/driver.c
      test/toxcore/fuzz_main.c
      test/toxcore/methods.c
      test/toxcore/msgpack-c/src/objectc.c
      test/toxcore/msgpack-c/src/unpack.c
      test/toxcore/msgpack-c/src/version.c
      test/toxcore/msgpack-c/src/vrefbuffer.c
      test/toxcore/msgpack-c/src/zone.c
      test/toxcore/packet_kinds.c
      test/toxcore/test_main.c
      test/toxcore/toxcore/toxcore/assoc.c
      test/toxcore/toxcore/toxcore/crypto_core.c
      test/toxcore/toxcore/toxcore/DHT.c
      test/toxcore/toxcore/toxcore/friend_connection.c
      test/toxcore/toxcore/toxcore/friend_requests.c
      test/toxcore/toxcore/toxcore/group.c
      test/toxcore/toxcore/toxcore/LAN_discovery.c
      test/toxcore/toxcore/toxcore/list.c
      test/toxcore/toxcore/toxcore/logger.c
      test/toxcore/toxcore/toxcore/Messenger.c
      test/toxcore/toxcore/toxcore/net_crypto.c
      test/toxcore/toxcore/toxcore/network.c
      test/toxcore/toxcore/toxcore/onion_announce.c
      test/toxcore/toxcore/toxcore/onion.c
      test/toxcore/toxcore/toxcore/onion_client.c
      test/toxcore/toxcore/toxcore/ping_array.c
      test/toxcore/toxcore/toxcore/ping.c
      test/toxcore/toxcore/toxcore/TCP_client.c
      test/toxcore/toxcore/toxcore/TCP_connection.c
      test/toxcore/toxcore/toxcore/TCP_server.c
      test/toxcore/toxcore/toxcore/tox.c
      test/toxcore/toxcore/toxcore/tox_group.c
      test/toxcore/toxcore/toxcore/util.c
      test/toxcore/util.c
  if flag(library-only)
    buildable: False

test-suite test-hstox
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs:
      test
  ghc-options:
      -Wall
      -fno-warn-unused-imports
  build-depends:
      base < 5
    , async
    , hstox
  main-is: test-hstox.hs

test-suite test-toxcore
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs:
      test
  ghc-options:
      -Wall
      -fno-warn-unused-imports
  build-depends:
      base < 5
    , hstox
    , process
  main-is: test-toxcore.hs
