load("@rules_haskell//haskell:defs.bzl", "haskell_binary")

haskell_binary(
    name = "toxsave-convert",
    srcs = ["toxsave-convert.hs"],
    deps = [
        "//hs-toxcore",
        "//third_party/haskell:base",
        "//third_party/haskell:binary",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:groom",
    ],
)

haskell_binary(
    name = "toxsave-test",
    srcs = ["toxsave-test.hs"],
    compiler_flags = ["-optl=-fsanitize=address"],
    deps = [
        "//c-toxcore",
        "//hs-toxcore",
        "//third_party/haskell:QuickCheck",
        "//third_party/haskell:base",
        "//third_party/haskell:binary",
        "//third_party/haskell:bytestring",
    ],
)
