load("@rules_haskell//haskell:defs.bzl", "haskell_binary", "haskell_test")

haskell_binary(
    name = "toxsave-convert",
    srcs = ["toxsave-convert.hs"],
    tags = ["no-cross"],
    visibility = ["//tools/haskell:__pkg__"],
    deps = [
        "//hs-toxcore",
        "//third_party/haskell:base",
        "//third_party/haskell:binary",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:groom",
    ],
)

haskell_test(
    name = "toxsave-test",
    srcs = ["toxsave-test.hs"],
    ghcopts = ["-optl=-fsanitize=address"],
    tags = ["no-cross"],
    visibility = ["//tools/haskell:__pkg__"],
    deps = [
        "//c-toxcore",
        "//hs-toxcore",
        "//third_party/haskell:QuickCheck",
        "//third_party/haskell:base",
        "//third_party/haskell:binary",
        "//third_party/haskell:bytestring",
    ],
)
